Fixed react reveal fade to collapse and use when prop. Added margin to phone number column. Fixed portfolio link rel security risk

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,11 @@ h3 {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center
+  align-items: center;
+}
+
+#number {
+  margin-right: 6px;
 }
 
 h5 {
